Fix food info overflow

--- a/frontend/src/components/foods/foods.css
+++ b/frontend/src/components/foods/foods.css
@@ -25,7 +25,7 @@
     text-align: center;
     box-shadow: -1px 0px 5px 4px rgba(211, 211, 211, 0.7);
     width: 290px;
-    height: 210px;
+    height: 240px;
     margin: 10px;
     /* border: 1px solid black; */
     /* background: rgb(204, 200, 200, 0.6); */
@@ -44,7 +44,7 @@
 
 
 .food-info {
-    height: 20%;
+    height: 22%;
     display: block;
     font-size: 15px;
     padding: 10px;
